# ot-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
examples/: warp.rs
src/: api.rs
src/api/: context.rs  registry.rs  resources.rs  trace.rs  unit.rs
src/api/trace/: in_memory.rs  key.rs  propagation.rs  scope.rs  span.rs  span_context.rs  span_data.rs  status.rs  trace_context.rs
tests/: lib.rs  resources.rs  span_context.rs
