[package]
name = "ot-rs"
version = "0.1.0"
authors = ["ROki1988 <roki.swindler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.1.0"
rand = "0.7.0"
bytes = "0.4.12"

[dev-dependencies]
warp = "0.1.18"
