[package]
name = "ot-rs"
version = "0.1.0"
authors = ["ROki1988 <roki.swindler@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
rand = "0.7.2"
bytes = "0.4.12"
futures-preview = "=0.3.0-alpha.19"

[dev-dependencies]
warp = "0.2.5"
proptest = "0.9.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "prepush-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]